--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="/recipes/pudding.html">Homemade Vanilla Pudding</a></li>
+        <li><a href="/recipes/strawberrysando.html">Strawberry Sando</a></li>
+        <li><a href="/recipes/blackoutcake.html">Blackout Sando</a></li>
+    </ul>
 </body>
 </html>
