adjust image links

--- a/recipes/blackoutcake.html
+++ b/recipes/blackoutcake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Blackout Cake</h1>
-    <img src="/images/blackoutcake.jpeg" alt="image of a Blackout Cake" style="width: 265px;">
+    <img src="images/blackoutcake.jpeg" alt="image of a Blackout Cake" style="width: 265px;">
     <h2>A beautiful and delicious cake, learn how to make a Blackout Cake</h2>
     <p>Blackout cake is a moist and tender cake with deep cocoa flavor. Layers of chocolate cake are filled with light and airy chocolate pudding, then all of this goodness is enrobed in a rich chocolate ganache. This is a dream dessert: chocolate on chocolate on chocolate.</p>
     <h2>Ingredients</h2>
