--- a/recipes/pudding.html
+++ b/recipes/pudding.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Homemade Vanilla Pudding</h1>
-    <img src="/images/pudding.webp" alt="image of a pudding" style="width: 265px;">
+    <img src="images/pudding.webp" alt="image of a pudding" style="width: 265px;">
     <h2>Sweet and delicious, learn how to make a vanilla pudding</h2>
     <p>Vanilla pudding is a creamy, sweet milk-based dessert that is typically thickened with a combination of cornstarch or flour and eggs, and then flavored with vanilla. It can be made from scratch using milk, sugar, and vanilla extract, or from a boxed mix. Vanilla pudding is often enjoyed on its own, as a base for other desserts like banana pudding or trifle, or topped with fresh fruit or whipped cream.</p>
     <h2>Ingredients</h2>
