--- a/recipes/strawberrysando.html
+++ b/recipes/strawberrysando.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Strawberry Sando</h1>
-    <img src="/images/sando.webp" alt="image of a Strawberry Sando" style="width: 265px;">
+    <img src="images/sando.webp" alt="image of a Strawberry Sando" style="width: 265px;">
     <h2>Sandwich and Strawberries, learn how to make a Strawberry Sando</h2>
     <p>Chef John's strawberry sando, a Japanese-style fruit sandwich, is delicious, fun to make, and very, very pretty. The flavor is simply strawberries in sweet cream, so use the sweetest, ripest strawberries you can find.</p>
     <h2>Ingredients</h2>
